be/.config/packages/liqo/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-liqo-metrics
  namespace: liqo
spec:
  ingressClassName: nginx
  rules:
  - host: liqo-gateway-metrics.liqo.charity-project.eu
    http:
      paths:
      - backend:
          service:
            name: liqo-gateway-metrics
            port:
              number: 5872
        path: /
        pathType: ImplementationSpecific
